# rust-info

./: Cargo.toml  README.md
src/: main.rs
