[package]
name = "rust-information"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nph278/rust-info/tree/main"
homepage = "https://github.com/nph278/rust-info/tree/main"
description = "A short command-line tool to get info about a rust project."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-info"
path = "src/main.rs"

[dependencies]
cargo_toml = "0.10.3"
colored = "2.0"
